{
	"screen.lotteries.title": "Lotteries",
	"screen.about.title": "About",
	"screen.settings.title": "Settings",
	"screen.register.title": "Register"
}