...
  return (
    <View style={styles.container}>
      <View style={styles.settingRow}>
        <Switch
          value={isAddingNewLotteriesEnabled}
          onValueChange={onIsAddingNewLotteriesEnabledValueChange}
          testID="adding_new_lottery_switch"
        />
        <Text style={styles.settingRowText}>Enable adding new lotteries</Text>
      </View>

      <View style={styles.settingRow}>
        <Switch
...
