...
          selectedLotteries={selectedLotteries}
          registeredLotteries={registeredLotteries || []}
        />
        {lotteries.isAddingNewLotteriesEnabled ? (
          <FAB
          onPress={() => navigation.navigate('AddLottery')}
          testID="add_lottery_FAB"
          accessibilityLabel="Add lottery"
          accessibilityHint="Pressing this button will add a new lottery"
        />
        ) : null}
      </View>
    </LotteriesSortingContextProvider>
...
